victoriametrics/single/httproute.yaml

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vm-metrics-route
  namespace: victoriametrics
spec:
  parentRefs:
    - name: vm-metrics-gateway # 绑定到上面创建的 Gateway
  hostnames:
    - "vm.sumery.com" # <-- 替换成你希望访问 VictoriaMetrics 的域名
  rules:
    - matches:
        # 匹配所有路径，用于查询和写入API
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: vm-single-victoria-metrics-single-server # Service 名称
          port: 8428 # 路由到 VictoriaMetrics 的 HTTP 端口
